--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 
 	<name>afl-stats</name>
 	<url>finiteloop.me</url>
+	
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -16,4 +17,7 @@
 		<maven.compiler.target>1.7</maven.compiler.target>
 	</properties>
 
+	<modules>
+		<module>afl-stats-extractor</module>
+	</modules>
 </project>
