--- a/afl-stats-extractor/pom.xml
+++ b/afl-stats-extractor/pom.xml
@@ -9,7 +9,7 @@
 	<artifactId>afl-stats-extractor</artifactId>
 	<name>Extract AFL Statistics</name>
 	<description>Extracts AFL statistics from a HTML page</description>
-	
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -26,7 +26,27 @@
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-core</artifactId>
-			<version>${camel.version}</version>
+		</dependency>
+		<!-- Required to tidy up the XML -->
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-tagsoup</artifactId>
+		</dependency>
+		<!-- Required for XML <-> Json transformations -->
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-xmljson</artifactId>
+		</dependency>
+		<!-- Required for http client -->
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-http4</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>xom</groupId>
+			<artifactId>xom</artifactId>
+			<version>1.2.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
