--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<version>0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
-	<name>afl-stats</name>
+	<name>AFL Statistics</name>
 	<url>finiteloop.me</url>
 
 
@@ -17,9 +17,41 @@
 		<maven.compiler.target>1.7</maven.compiler.target>
 		<fabric8.version>2.2.19</fabric8.version>
 		<camel.version>2.15.2</camel.version>
+		<version.jboss.bom.eap>6.4.0.GA</version.jboss.bom.eap>
 	</properties>
 
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-war-plugin</artifactId>
+					<version>2.6</version>
+					<configuration>
+						<failOnMissingWebXml>false</failOnMissingWebXml>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
 	<modules>
 		<module>afl-stats-extractor</module>
 	</modules>
+	<profiles>
+		<!-- Activate JBoss Product Maven repository -->
+		<profile>
+			<id>jboss-product-repository</id>
+			<activation>
+				<property>
+					<name>!jboss-product-repository</name>
+				</property>
+			</activation>
+			<repositories>
+				<repository>
+					<id>redhat-techpreview-all-repository</id>
+					<url>http://maven.repository.redhat.com/techpreview/all/</url>
+				</repository>
+			</repositories>
+		</profile>
+	</profiles>
 </project>
