--- a/pom.xml
+++ b/pom.xml
@@ -42,10 +42,19 @@
 		<profile>
 			<id>jboss-product-repository</id>
 			<activation>
-				<property>
-					<name>!jboss-product-repository</name>
-				</property>
+				<activeByDefault>true</activeByDefault>
 			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<skipTests>true</skipTests>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
 			<repositories>
 				<repository>
 					<id>redhat-techpreview-all-repository</id>
