--- a/afl-stats-extractor/pom.xml
+++ b/afl-stats-extractor/pom.xml
@@ -94,6 +94,11 @@
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-http4</artifactId>
 		</dependency>
+		<!-- Required for JsonPath -->
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-jsonpath</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
