--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 	</properties>
 
 	<build>
+		<finalName>${project.artifactId}</finalName>
 		<pluginManagement>
 			<plugins>
 				<plugin>
@@ -42,31 +43,35 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+	<repositories>
+		<!-- JBoss Product Maven repository -->
+		<repository>
+			<id>redhat-techpreview-all-repository</id>
+			<url>http://maven.repository.redhat.com/techpreview/all/</url>
+		</repository>
+	</repositories>
 	<modules>
 		<module>afl-stats-extractor</module>
 	</modules>
 	<profiles>
-		<!-- Activate JBoss Product Maven repository -->
+		<!-- Profile specifically for openshift -->
 		<profile>
-			<id>jboss-product-repository</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
+			<id>openshift</id>
 			<build>
 				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-war-plugin</artifactId>
+						<configuration>
+							<outputDirectory>deployments</outputDirectory>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
-						<version>2.18.1</version>
 					</plugin>
 				</plugins>
 			</build>
-			<repositories>
-				<repository>
-					<id>redhat-techpreview-all-repository</id>
-					<url>http://maven.repository.redhat.com/techpreview/all/</url>
-				</repository>
-			</repositories>
 		</profile>
 	</profiles>
 </project>
