--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
 		<fabric8.version>2.2.19</fabric8.version>
 		<camel.version>2.15.2</camel.version>
 		<version.jboss.bom.eap>6.4.0.GA</version.jboss.bom.eap>
+		<version.shrinkwrap.resolvers>2.1.1</version.shrinkwrap.resolvers>
+		<version.jboss.bom.infinispan>1.0.7.Final</version.jboss.bom.infinispan>
 	</properties>
 
 	<build>
